# zelazny

./: .taplo.toml  Cargo.toml
protos/: Cargo.toml  build.rs
protos/proto/: tablet.proto  zelazny.proto
protos/src/: lib.rs
tablet/: Cargo.toml
tablet/src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  server.rs
