[workspace]

members = ["protos", "tablet"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
authors = ["Alex Feinberg <alex@strlen.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
prost = "0.11.9"
prost-build = "0.11.9"
protos = { path = "protos" }
tablet = { path = "tablet" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-build = "0.9.2"
tracing = "0.1"
futures = "0.3"

